<resources>
    <string name="app_name">IBSU</string>
    <string name="home">Home</string>
    <string name="lecturers">Lecturers</string>
    <string name="sis">SIS</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="events">Events</string>
    <string name="programs">Programs</string>
    <string name="exchange_programs">Exchange \nPrograms</string>
    <string name="entertainment">Entertainment</string>
    <string name="online">Online</string>
    <string name="computer_science">Computer Science</string>
    <string name="public_administration_and_state_governance">Public Administration and State Governance</string>
    <string name="virtual">Virtual</string>
    <string name="bachelor">Bachelor</string>
    <string name="apple">Apple</string>
    <string name="news">News</string>
    <string name="upcoming_events">Upcoming Events:</string>
    <string name="announcements">Announcements</string>
    <string name="staff">Staff</string>
    <string name="clubs">Clubs</string>
    <string name="games">Games</string>
    <string name="facebook_pages">Facebook \nPages</string>
    <string name="bachelor_s">Bachelor\'s</string>
    <string name="master_s">Master\'s</string>
    <string name="doctorate">Doctorate</string>
    <string name="clickable_image_of_club">Clickable image of club</string>
    <string name="ping_pong">Ping-Pong</string>
    <string name="room">Room</string>
    <string name="disable_labeling_on_bottom_navigation">Disable labeling on bottom navigation</string>
    <string name="show_label_only_on_selected_menu_item">Show label only on selected menu item</string>
    <string name="description">Description</string>
    <string name="contact_information">Contact Information</string>
    <string name="filter_by_sector">Filter by Sector</string>
    <string name="loading">Loading</string>
    <string name="fan_page">Fan Page</string>
    <string name="unofficial_facebook_pages_created_by_students_for_students">Unofficial Facebook pages created by students for students.</string>
    <string name="facebook_pages_created_by_students_for_students_for_fun_purposes">Facebook pages created by students for students for fun purposes</string>
    <string name="no_week_value_found">No week value found</string>
    <string name="attention_those_pages_are_not_created_nor_maintained_by_ibsu_themselves">Attention: Those pages are not created nor maintained by IBSU themselves.</string>
    <string name="dean_doctor">Dean, Doctor</string>
    <string name="school_staff">School Staff</string>
    <string name="language_lecturers">Language Lecturers</string>
    <string name="choose_staff_type">Choose Staff Type</string>
    <string name="club_information">Club Information</string>
    <string name="school_of_computer_science_and_architecture">School of Computer Science and Architecture</string>
    <string name="school_of_business">School of Business</string>
    <string name="school_of_law_and_state_governance">School of Law and State Governance</string>
    <string name="pick_school">Pick School</string>
    <string name="schools">Schools</string>
    <string name="education_humanities_and_social_sciences">Education, Humanities and Social Sciences</string>
    <string name="business">Business</string>
    <string name="law_and_state_governance">Law and State Governance</string>
    <string name="choose_staff">Choose Staff</string>
    <string name="computer_science_and_architecture">Computer Science and Architecture</string>
    <string name="other">Other</string>
    <string name="administration">Administration</string>
    <string name="more_information">More Information</string>
    <string name="dark_mode">Dark mode</string>
    <string name="application_language">Application language</string>
    <string name="useful_ndocuments">Useful Documents</string>
    <string name="admission">Admission</string>
    <string name="exam_ntopics">Exam\nTopics</string>
    <string name="international_relations">International \nRelations</string>
    <string name="student_nlife">Student Life</string>
    <string name="contact">Contact</string>
    <string name="choose_school">Choose School</string>
    <string name="student_life">Student Life</string>
    <string name="sport">Sport</string>
    <string name="types">Types</string>
    <string name="self_governance">Self Governance</string>
    <string name="discount">Discount</string>
    <string name="filter_by_language">Filter by Language</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="sys">Sys</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="system_default">System Default</string>
    <string name="select_mode">Select Mode</string>
    <string name="english">English</string>
    <string name="georgian">Georgian</string>
    <string name="select_language">Select Language</string>
    <string name="ka">Ka</string>
    <string name="en">En</string>
    <string name="changes_will_apply_after_application_restart">Changes will apply after application restart</string>
    <string name="president">"President - "</string>
    <string name="about_school">About School</string>
    <string name="school_programs">School Programs</string>
    <string name="game_room">"Game Room : "</string>
    <string name="academic">Academic</string>
    <string name="invited">Invited</string>
    <string name="name">Name</string>
    <string name="working_hours">Working Hours</string>
    <string name="governing_board">Governing Board</string>
    <string name="images">Images:</string>
    <string name="head_of_the_department">Head of the department</string>
    <string name="program">program</string>
    <string name="downloading">downloading</string>
    <string name="downloaded">Downloaded</string>
    <string name="go_to_downloads">Go to Downloads</string>
    <string name="courses">Courses</string>
    <string name="credit_value">Credit Value</string>
    <string name="about_program">About Program</string>
    <string name="prerequisites">Prerequisites:</string>
    <string name="etc">"ETC: "</string>
    <string name="semester">"Semester: "</string>
    <string name="none">none</string>
    <string name="course">Course</string>
    <string name="filter_by_credits">Credits</string>
    <string name="no_prerequisite">No Prerequisite</string>
    <string name="obligatory">Obligatory</string>
    <string name="elective">Elective</string>
    <string name="filters">Filters:</string>
    <string name="contact_hours_per_week">Contact hours per week:</string>
    <string name="page_is_being_processed">Page is being processed</string>
    <string name="downloading_pdf">Downloading PDF</string>
    <string name="download_failed">Download failed</string>
    <string name="open">Open</string>
    <string name="useful_documents">Useful Documents</string>
    <string name="deadline">Deadline:</string>
    <string name="country">Country:</string>
    <string name="check_internet_connection_and_scroll_to_refresh">Check Internet Connection and Scroll to Refresh</string>
    <string name="english_programs">English Programs</string>
    <string name="georgian_programs">Georgian Programs</string>
    <string name="all_programs">All Programs</string>
    <string-array name="filter_programs">
        <item name="all_sect">All Programs</item>
        <item name="eng_sect">English Programs</item>
        <item name="ge_sect">Georgian Programs</item>
    </string-array>
    <string-array name="filter_by_credit">
        <item name="all_etc">Any</item>
        <item name="3_etc">3</item>
        <item name="4_etc">4</item>
        <item name="5_etc">5</item>
        <item name="6_etc">6</item>
        <item name="7_etc">7</item>
    </string-array>
</resources>