<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  
    tools:context=".ui.element.HomeFragment">


    <com.ibsu.ibsu.ui.common.HoverButton
        android:layout_margin="10dp"
        android:id="@+id/buttonPrograms"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:backgroundTint="@color/ibsu"
        android:text="@string/programs"
        android:textColor="@color/white"
        android:textSize="@dimen/home_btn_sp"
        app:icon="@drawable/catalog"
        app:iconSize="30dp"
        android:paddingEnd="60dp"
        app:iconTint="@color/white"
        app:hoverTextColor="@color/OrangeHover"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="277dp" />

    <com.ibsu.ibsu.ui.common.HoverButton
        android:id="@+id/buttonSchool"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:iconSize="30dp"
        android:backgroundTint="@color/ibsu"
        android:text="@string/schools"
        android:textColor="@color/white"
        android:textSize="@dimen/home_btn_sp"
        android:paddingEnd="60dp"
        app:iconTint="@color/white"
        app:icon="@drawable/baseline_school_24"
        app:hoverTextColor="@color/OrangeHover"
        tools:layout_editor_absoluteX="209dp"
        tools:layout_editor_absoluteY="277dp" />

    <com.ibsu.ibsu.ui.common.HoverButton
        android:id="@+id/buttonIRO"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="6dp"
        android:visibility="gone"
        android:backgroundTint="@color/ibsu"
        android:text="@string/international_relations"
        android:textColor="@color/white"
        android:textSize="@dimen/home_btn_sp"
        app:hoverTextColor="@color/OrangeHover"
        app:layout_constraintTop_toBottomOf="@+id/buttonSchool"
        tools:layout_editor_absoluteX="33dp" />

    <com.ibsu.ibsu.ui.common.HoverButton
        android:id="@+id/buttonStudentLife"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:iconSize="30dp"
        app:iconTint="@color/white"
        app:icon="@drawable/reading_student"
        android:paddingEnd="60dp"

        android:layout_marginTop="6dp"
        android:backgroundTint="@color/ibsu"
        android:text="@string/student_nlife"
        android:textColor="@color/white"
        android:textSize="@dimen/home_btn_sp"
        app:hoverTextColor="@color/OrangeHover"
        app:layout_constraintTop_toBottomOf="@+id/buttonSchool"
        tools:layout_editor_absoluteX="209dp" />

    <com.ibsu.ibsu.ui.common.HoverButton
        android:id="@+id/buttonUsefulDocuments"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="6dp"
        app:iconSize="30dp"

        android:backgroundTint="@color/ibsu"
        android:text="@string/useful_ndocuments"
        android:textColor="@color/white"
        android:textSize="@dimen/home_btn_sp"
        app:iconTint="@color/white"
        android:paddingEnd="60dp"
        app:icon="@drawable/document"
        app:hoverTextColor="@color/OrangeHover"
        app:layout_constraintTop_toBottomOf="@+id/buttonIRO"
        tools:layout_editor_absoluteX="33dp" />

    <com.ibsu.ibsu.ui.common.HoverButton
        android:id="@+id/buttonContact"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:paddingEnd="60dp"
        app:iconSize="30dp"
        app:iconTint="@color/white"
        app:icon="@drawable/baseline_call_24"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/ibsu"
        android:text="@string/contact"
        android:textColor="@color/white"
        android:textSize="@dimen/home_btn_sp"
        app:hoverTextColor="@color/OrangeHover"
        app:layout_constraintTop_toBottomOf="@+id/buttonStudentLife"
        tools:layout_editor_absoluteX="209dp" />


</androidx.appcompat.widget.LinearLayoutCompat>